--- a/index.html
+++ b/index.html
@@ -93,10 +93,13 @@
 
       <ul class="intro-social">
       <li>
-      <a href="#"><i class="fa fa-twitter"></i></a>
+      <a href="https://www.twitter.com/mutiat900"><i class="fa fa-twitter"></i></a>
       </li>
       <li>
-      <a href="#"><i class="fa fa-dribbble"></i></a>
+      <a href="https://github.com/Rike12"><i class="fa fa-github"></i></a>
+      </li>
+      <li>
+      <a href="https://www.linkedin.com/in/mutiat-adepoju-35b54a171"><i class="fa fa-linkedin"></i></a>
       </li>
       </ul>
       <!-- /intro-social -->
@@ -112,7 +115,7 @@
     <h1>Let me introduce myself.</h1>
 
     <div class="intro-info">
-    <img src="/images/mutiat" alt="Profile Picture" />
+    <img src="/images/Mutiat Adepoju.jpg" alt="Profile Picture" />
 
     <p class="lead">
     I have a passion for web development and I am eager to learn and
