--- a/portfolio.html
+++ b/portfolio.html
@@ -153,19 +153,19 @@
                 <img src="images/portfolio/modals/6-10.png" alt="" />
               </div>
 
-              <div class="description-box">
-                <h4>Profile card component</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
+  <div class="description-box">
+    <h4>Profile card component</h4>
+    <p>
+    The  is a profile card component, it is a frontend mentor challenge. The  card layout
+    doesn't shift, it was  built with HTML and CSS. It is responsive.
+     <a href="https://github.com/Rike12/Day-6-10.git"> View Github Repo Here</a>
+    </p>
 
-                <div class="categories">Web Design</div>
-              </div>
+    <div class="categories">Web Design</div>
+    </div>
 
               <div class="link-box">
-                <a href="https://day6-10.netlify.app">Details</a>
+                <a href="https://day6-10.netlify.app">Netlify</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -176,22 +176,22 @@
                 <img src="images/portfolio/modals/16-20.png" alt="" />
               </div>
 
-              <div class="description-box">
-                <h4>Blogr Landing page</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
+    <div class="description-box">
+    <h4>Blogr Landing page</h4>
+    <p> This is a frontened mentor challenge. It was built with
+      Semantic HTML5 markup,CSS custom and Flexbox. 
+      It is responsive,you can view both on desktop and on mobile phones.
+      <a href="https://github.com/Rike12/16-20.git"> View Github Repo Here</a>
+    </p>
 
-                <div class="categories">Web Design</div>
-              </div>
+      <div class="categories">Web Design</div>
+      </div>
 
-              <div class="link-box">
-                <a href="https://inquisitive-cheesecake-2ad1c9.netlify.app">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>                      
+      <div class="link-box">
+    <a href="https://inquisitive-cheesecake-2ad1c9.netlify.app">Netlify</a>
+    <a href="#" class="popup-modal-dismiss">Close</a>
+    </div>
+    </div>                      
 
   <!-- /modal-03 -->
             <div id="modal-03" class="popup-modal slider mfp-hide">
@@ -203,16 +203,15 @@
               <div class="description-box">
                 <h4>Tribute page</h4>
                 <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
+                  This is a tribute page.It was built with HTML, CSS and carousel.
+                      <a href="https://github.com/Rike12/Day-11-15.git"> View Github Repo Here</a>
                 </p>
 
                 <div class="categories">Web Development</div>
               </div>
 
               <div class="link-box">
-                <a href="https://glittering-valkyrie-c8a4d1.netlify.app">Details</a>
+                <a href="https://glittering-valkyrie-c8a4d1.netlify.app">Netlify</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -226,16 +225,16 @@
               <div class="description-box">
                 <h4>Intro component with Sign Up</h4>
                 <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
+                  This is an Intro component with sign-up form. 
+                  It was built with HTML and CSS. It is  responsive, it can be viewed both on desktop and mobile devices
+                         <a href="https://github.com/Rike12/Day1-5.git"> View Github Repo Here</a>
                 </p>
 
                 <div class="categories">Web Development</div>
               </div>
 
               <div class="link-box">
-                <a href="https://day1-5.netlify.app">Details</a>
+                <a href="https://day1-5.netlify.app">Netlify</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
