--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,13 @@
     <!-- header 
    ================================================== -->
 <header>
-<div class="nav center">
-<img class="img-fluid" src="./images/mlogo.png" alt="" width="50px">
-    
-<ul>
+    <nav>
+        <div class="container">
+            <div class="logo">
+                <img src="./images/mlogo.png" alt="">
+            </div>
+            <div class="menu">
+        <ul>
 <a href="./index.html"><l1>  Home</l1></a>     
 
 <a href="about.html"><l1>About</l1></a>
@@ -50,7 +53,9 @@
 <a href="portfolio.html"><l1>Portfolio</l1></a>
          
 <a href="./contact.html"><l1>Contact</l1></a>
-</ul>   
+                </ul>
+            </div>
+    </header> 
   
     <!-- /header -->
 
