--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div class="logo">
                 <img src="./images/mlogo.png" alt="">
             </div>
-            <div class="menu">
-        <ul>
+<div class="menu">
+<ul>
 <a href="./index.html"><l1>  Home</l1></a>     
 
-<a href="./about.html"><l1>About</l1></a>
+<a href="about.html"><l1>About</l1></a>
                     
 <a href="portfolio.html"><l1>Portfolio</l1></a>
          
