--- a/about.html
+++ b/about.html
@@ -38,15 +38,12 @@
   <body id="top">
     <!-- header 
    ================================================== -->
-  <header>
-    <nav>
-        <div class="container">
-            <div class="logo">
-                <img src="./images/mlogo.png" alt="">
-            </div>
-            <div class="menu">
-        <ul>
-<a href="./index.html"><l1>  Home</l1></a>     
+ <header class="header">
+  <a href="" class="logo"><img src="./images/mlogo.png" alt=""></a>
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+   <a href="./index.html"><l1>  Home</l1></a>     
 
 <a href="./about.html"><l1>About</l1></a>
                     
@@ -54,8 +51,7 @@
          
 <a href="contact.html"><l1>Contact</l1></a>
                 </ul>
-            </div>
-    </header> 
+   </header>
      <!-- /header -->
 
     <!-- about section
