--- a/index.html
+++ b/index.html
@@ -44,15 +44,12 @@
     <!-- header 
    ================================================== -->
         <!-- Navigation -->
-   <header>
-    <nav>
-        <div class="container">
-            <div class="logo">
-                <img src="./images/mlogo.png" alt="">
-            </div>
-<div class="menu">
-<ul>
-<a href="./index.html"><l1>  Home</l1></a>     
+   <header class="header">
+  <a href="" class="logo"><img src="./images/mlogo.png" alt=""></a>
+  <input class="menu-btn" type="checkbox" id="menu-btn" />
+  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+  <ul class="menu">
+   <a href="./index.html"><l1>  Home</l1></a>     
 
 <a href="about.html"><l1>About</l1></a>
                     
@@ -60,8 +57,8 @@
          
 <a href="contact.html"><l1>Contact</l1></a>
                 </ul>
-            </div>
-    </header> 
+   </header>
+   
      <!-- /header -->
 
       <!-- /top-bar -->
