--- a/about.html
+++ b/about.html
@@ -38,20 +38,30 @@
   <body id="top">
     <!-- header 
    ================================================== -->
- <header class="header">
-  <a href="" class="logo"><img src="./images/mlogo.png" alt=""></a>
-  <input class="menu-btn" type="checkbox" id="menu-btn" />
-  <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-  <ul class="menu">
-   <a href="./index.html"><l1>  Home</l1></a>     
-
-<a href="./about.html"><l1>About</l1></a>
-                    
-<a href="portfolio.html"><l1>Portfolio</l1></a>
-         
-<a href="contact.html"><l1>Contact</l1></a>
-                </ul>
-   </header>
+<header class="header">
+        <nav class="navbar">
+             <a href="" class="logo"><img src="./images/mlogo.png" alt=""></a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                   <a href="./index.html"><l1>Home</l1></a>
+                </li>
+                <li class="nav-item">
+                    <a href="about.html"><l1>About</l1></a>
+                </li>
+                <li class="nav-item">
+                   <a href="portfolio.html"><l1>Portfolio</l1></a>
+                </li>
+                <li class="nav-item">
+                  <a href="contact.html"><l1>Contact</l1></a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+</header>
      <!-- /header -->
 
     <!-- about section
