--- a/about.html
+++ b/about.html
@@ -38,15 +38,15 @@
   <body id="top">
     <!-- header 
    ================================================== -->
-<header class="header">
+ <header class="header">
         <nav class="navbar">
              <a href="" class="logo"><img src="./images/mlogo.png" alt=""></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                   <a href="./index.html"><l1>Home</l1></a>
+                   <a href="index.html"><l1>Home</l1></a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html"><l1>About</l1></a>
+                    <a href="./about.html"><l1>About</l1></a>
                 </li>
                 <li class="nav-item">
                    <a href="portfolio.html"><l1>Portfolio</l1></a>
@@ -62,6 +62,7 @@
             </div>
         </nav>
 </header>
+
      <!-- /header -->
 
     <!-- about section
