--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
              <a href="" class="logo"><img src="./images/mlogo.png" alt=""></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                   <a href="./index.html"><l1>Home</l1></a>
+                   <a href="index.html"><l1>Home</l1></a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html"><l1>About</l1></a>
