--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                     <a href="about.html"><l1>About</l1></a>
                 </li>
                 <li class="nav-item">
-                   <a href="portfolio.html"><l1>Portfolio</l1></a>
+                   <a href="./portfolio.html"><l1>Portfolio</l1></a>
                 </li>
                 <li class="nav-item">
                   <a href="contact.html"><l1>Contact</l1></a>
