--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                    <a href="portfolio.html"><l1>Portfolio</l1></a>
                 </li>
                 <li class="nav-item">
-                  <a href="contact.html"><l1>Contact</l1></a>
+                  <a href="./contact.html"><l1>Contact</l1></a>
                 </li>
             </ul>
             <div class="hamburger">
