--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
         <div class="subcontainer">   
         <!-- Menu -->
         <nav class="navbar">
-          <a href="#"><img src="./images/mlogo.png" alt=""></a>
-            <ul class="menu">
-                <li class="Item"><a href="./index.html">Home</a></li>
-                <li class="Item"><a href="about.html">About</a></li>
-                <li class="Item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="Item"><a href="contact.html">Contact</a></li>
+          <a href="#"class="logo"><img src="./images/mlogo.png" alt=""></a>
+            <ul class="nav-menu">
+                <li class="nav-Item">
+                  <a href="./index.html"class="nav-link">Home</a>
+                <a href="./about.html" class="nav-link">About</a>
+                <a href="./portfolio.html" class="nav-link">Portfolio</a>
+                <a href="./contact.html" class="nav-link">Contact</a>
+              </li>
             </ul>
             <div class="hamburger">
             <span class="bar"></span>
