--- a/portfolio.html
+++ b/portfolio.html
@@ -43,12 +43,13 @@
         <div class="subcontainer">   
         <!-- Menu -->
         <nav class="navbar">
-          <a href="#"><img src="./images/mlogo.png" alt=""></a>
-            <ul class="menu">
-                <li class="nav-item"><a href="./index.html">Home</a></li>
-                <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="./portfolio.html">Portfolio</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
+          <a href="#"class="logo"><img src="./images/mlogo.png" alt=""></a>
+            <ul class="nav-menu">
+                <li class="nav-Item">
+                  <a href="./index.html"class="./nav-link">Home</a></li>
+                <li class="nav-Item"><a href="./about.html" class="nav-link">About</a></li>
+                <li class="nav-Item"><a href="./portfolio.html" class="nav-link">Portfolio</a></li>
+                <li class="nav-Item"><a href="./contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
             <span class="bar"></span>
