--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- Menu -->
         <nav class="navbar">
           <a href="#"class="logo"><img src="./images/mlogo.png" alt=""></a>
-            <ul class="nav-menu">
+            <ul class="nav-menu" id="toggle">
                 <li class="nav-Item">
                   <a href="./index.html"class="nav-link">Home</a>
                 <a href="./about.html" class="nav-link">About</a>
