--- a/portfolio.html
+++ b/portfolio.html
@@ -42,14 +42,15 @@
       <div class="container">
         <div class="subcontainer">   
         <!-- Menu -->
-        <nav class="navbar">
+         <nav class="navbar">
           <a href="#"class="logo"><img src="./images/mlogo.png" alt=""></a>
-            <ul class="nav-menu">
+            <ul class="nav-menu" id="toggle">
                 <li class="nav-Item">
-                  <a href="./index.html"class="./nav-link">Home</a></li>
-                <li class="nav-Item"><a href="./about.html" class="nav-link">About</a></li>
-                <li class="nav-Item"><a href="./portfolio.html" class="nav-link">Portfolio</a></li>
-                <li class="nav-Item"><a href="./contact.html" class="nav-link">Contact</a></li>
+                  <a href="./index.html"class="nav-link">Home</a>
+                <a href="./about.html" class="nav-link">About</a>
+                <a href="./portfolio.html" class="nav-link">Portfolio</a>
+                <a href="./contact.html" class="nav-link">Contact</a>
+              </li>
             </ul>
             <div class="hamburger">
             <span class="bar"></span>
