--- a/about.html
+++ b/about.html
@@ -36,8 +36,10 @@
   </head>
 
   <body id="top">
-    <!-- header 
+   
+       <!-- header 
    ================================================== -->
+        <!-- Navigation -->
 <header class="header">
       <div class="container">
         <div class="subcontainer">   
@@ -61,9 +63,11 @@
         </div>
       </div>
     </header>
+    
+
      <!-- /header -->
 
-     
+      <!-- /top-bar -->
 
     <!-- about section
    ================================================== -->
