--- a/about.html
+++ b/about.html
@@ -40,29 +40,30 @@
        <!-- header 
    ================================================== -->
         <!-- Navigation -->
-<header class="header">
-      <div class="container">
-        <div class="subcontainer">   
-        <!-- Menu -->
-        <nav class="navbar">
-          <a href="#"class="logo"><img src="./images/mlogo.png" alt=""></a>
-            <ul class="nav-menu" id="toggle">
-                <li class="nav-Item">
-                  <a href="./index.html"class="nav-link">Home</a>
-                <a href="./about.html" class="nav-link">About</a>
-                <a href="./portfolio.html" class="nav-link">Portfolio</a>
-                <a href="./contact.html" class="nav-link">Contact</a>
-              </li>
-            </ul>
-            <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-            </div>
-        </nav>
-        </div>
-      </div>
-    </header>
+<header>   	
+   	<div class="row">
+
+   		<div class="top-bar">
+   			<a class="menu-toggle" href="#"><span>Menu</span></a>
+
+	   		<div class="logo">
+		         <a href="#"><img src="./images/mlogo.png" alt=""></a>
+		      </div>		      
+
+		   	<nav id="main-nav-wrap">
+					<ul class="main-navigation">
+						<li><a class="smoothscroll"href="./index.html" title="">Home</a></li>
+						<li  class="current"><a class="smoothscroll" href="about.html" title="">About</a></li>
+						<li class="smoothscroll"><a href="./portfolio.html" title="">Portfolio</a></li>				
+						<li><a href="./contact.html" title="">Contact</a></li>	
+						<!-- <li><a href="styles.html" title="">Style Demo</a></li>				 -->
+					</ul>
+				</nav>    		
+   		</div> <!-- /top-bar --> 
+   		
+   	</div> <!-- /row --> 		
+   </header> <!-- /header -->
+
     
 
      <!-- /header -->
