--- a/about.html
+++ b/about.html
@@ -31,32 +31,31 @@
     <script src="js/pace.min.js"></script>
 
     <!-- favicons
-	================================================== -->
+  ================================================== -->
     <link rel="icon" type="image/png" href="/images/mlogo.png" />
   </head>
 
   <body id="top">
-   
-       <!-- header 
+
+ 	<!-- header 
    ================================================== -->
-        <!-- Navigation -->
-<header>   	
+   <header>   	
    	<div class="row">
 
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="#"><img src="./images/mlogo.png" alt=""></a>
+		         <a href=""><img src="./images/mlogo.png" alt=""></a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
-						<li><a class="smoothscroll"href="./index.html" title="">Home</a></li>
-						<li  class="current"><a class="smoothscroll" href="about.html" title="">About</a></li>
-						<li class="smoothscroll"><a href="./portfolio.html" title="">Portfolio</a></li>				
-						<li><a href="./contact.html" title="">Contact</a></li>	
-						<!-- <li><a href="styles.html" title="">Style Demo</a></li>				 -->
+						<li><a   href="./index.html" title="">Home</a></li>
+						<li class="current"><a  href="./about.html" title="">About</a></li>		
+						<li><a   href="./portfolio.html" title="">Portfolio</a></li>				
+						<li><a  href="./contact.html" title="">Contact</a></li>	
+						
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -64,11 +63,6 @@
    	</div> <!-- /row --> 		
    </header> <!-- /header -->
 
-    
-
-     <!-- /header -->
-
-      <!-- /top-bar -->
 
     <!-- about section
    ================================================== -->
@@ -220,10 +214,4 @@
   </body>
 </html>
 
-    <!-- Java Script
-   ================================================== -->
-    <script src="js/jquery-2.1.3.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-  </body>
-</html>
+  
