--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,10 @@
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
-						<li><a class="smoothscroll" href="./index.html" title="">Home</a></li>
-						<li><a class="smoothscroll" href="./about.html" title="">About</a></li>
-						<li><a class="smoothscroll" href="./portfolio.html" title="">Portfolio</a></li>				
-						<li class="current"><a class="smoothscroll" href="contact.html" title="">Contact</a></li>	
+						<li><a href="./index.html" title="">Home</a></li>
+						<li><a  href="./about.html" title="">About</a></li>
+						<li><a  href="./portfolio.html" title="">Portfolio</a></li>				
+						<li class="current"><a  href="contact.html" title="">Contact</a></li>	
 						<!-- <li><a href="styles.html" title="">Style Demo</a></li>				 -->
 					</ul>
 				</nav>    		
