--- a/portfolio.html
+++ b/portfolio.html
@@ -172,7 +172,7 @@
                 <a href="#modal-06" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">Age Calculator</h3>
+                      <h3 class="folio-title">E-Commerce Project</h3>
                       <span class="folio-types"> Web Design </span>
                     </div>
                   </div>
@@ -273,18 +273,18 @@
                           <a href="#" class="popup-modal-dismiss">Close</a>
                         </div>
                       </div>
-                      <br>
+                      
                       <div id="modal-06" class="popup-modal slider mfp-hide">
                         <div class="item-wrap">
                           <video class="w-100" autoplay loop muted>
-                        <source src="images/shoping.png" type="video/mp4" />
+                        <source src="images/portfolio/modals/shoping.png" type="video/mp4" />
                           </video>
                         </div>
                         <div class="description-box">
                           <h4> E-commerce Project</h4>
                           <p>
                             This is a fashion store website. It was built with HTML,CSS and JavaScript. It is responsive.
-                                <a href="https://github.com/Rike12/Age-calculator"> View Github Repo Here</a>
+                                <a href=""> View Github Repo Here</a>
                           </p>
           
                           <div class="categories">Web Development</div>
